--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li><a href="#summary" class="nav-link scrollto"><i class="bx bxs-select-multiple"></i> <span>Summary & Key Skills</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bxs-graduation"></i> <span>Education Qualification</span></a></li>
           <li><a href="#employment" class="nav-link scrollto"><i class="bx bxl-edge"></i> <span>Employment Experience</span></a></li>
-          <li><a href="#project" class="nav-link scrollto"><i class="bx bxs-terminal"></i> <span>Working Project</span></a></li>
+          <li><a href="https://jahidcsekurigram.github.io/app/" class="nav-link scrollto"><i class="bx bxs-terminal"></i> <span>Working Project</span></a></li>
           <li><a href="#training" class="nav-link scrollto"><i class="bx bxl-microsoft-teams"></i> <span>Training Received</span></a></li>
           <li><a href="#achievements" class="nav-link scrollto"><i class="bx bxs-certification"></i> <span>Achievements</span></a></li>
           <li><a href="#reference" class="nav-link scrollto"><i class="bx bx-registered"></i> <span>Reference</span></a></li>
@@ -308,63 +308,7 @@
         </div>
       </div>
     </section><!-- End Skills Section -->
-
-    <!-- ======= Portfolio Section ======= -->
-    <!-- <section id="project" class="portfolio section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Working Project :</h2>
-        </div>
-
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Android Apps</li>
-              <li data-filter=".filter-soft">Software Development</li>
-              <li data-filter=".filter-web">Web Development</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/project/jahidcsetech.jpg" class="img-fluid">
-              <div class="portfolio-links">
-                <a href="assets/img/project/jahidcsetech.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="JahidcseTech Android Apps"><i class="bx bx-zoom-in"></i></a>
-                <a href="https://files.appsgeyser.com/JahidcSE%20Information%20Technology_13216012.apk?dl=true"><i class="bx bx-download"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/project/cms_project.jpg" class="img-fluid">
-              <div class="portfolio-links">
-                <a href="assets/img/project/cms_project.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Online Certificate Management System"><i class="bx bx-zoom-in"></i></a>
-                <a href="http://sonod.great-site.net/"><i class="bx bx-link-external"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-soft">
-            <div class="portfolio-wrap">
-              <img src="assets/img/project/age_calculator_csharp.jpg" class="img-fluid">
-              <div class="portfolio-links">
-                <a href="assets/img/project/age_calculator_csharp.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Age Calculator"><i class="bx bx-zoom-in"></i></a>
-                <a href="download/age-calculator.zip"><i class="bx bx-download"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section> -->
     
-
     <section id="training" class="skills section-bg" style="background-color: #fd373730; overflow-x: auto;">
       <div class="container">
 
@@ -457,7 +401,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+     <!-- ======= Testimonials Section ======= -->
     <section id="reference" class="testimonials" style="background-color: #68ff0045;">
       <div class="container">
 
@@ -470,7 +414,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
-                <img src="admin/dist/img/courses_teacher/dewan_juel.jpg" class="testimonial-img">
+                <img src="assets/img/dewan_juel.jpg" height="90" style="filter:drop-shadow(0px 0px 14px #fff);" class="testimonial-img">
                 <h3>Dewan Juel Rahman</h3>
                 <h4>Associate Professor (Dept: CSE)</h4>
                 <p>
@@ -483,7 +427,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                <img src="admin/dist/img/courses_teacher/shabuz.jpg" class="testimonial-img">
+                <img src="assets/img/shabuz.jpg" height="90" style="filter:drop-shadow(0px 0px 14px #fff);" class="testimonial-img">
                 <h3>Md Shahidul Islam Shabuz</h3>
                 <h4>Lecturer (Dept: CSE)</h4>
                 <p>
@@ -496,7 +440,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                <img src="assets/img/nazmul.jpg" class="testimonial-img">
+                <img src="assets/img/nazmul.jpg" height="90" style="filter:drop-shadow(0px 0px 14px #fff);" class="testimonial-img">
                 <h3>Md Nazmul Haque</h3>
                 <h4>Head Master</h4>
                 <p>
@@ -589,13 +533,6 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Develop by <strong><span>J@H!D cSE</span></strong>
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
