--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a href="https://www.instagram.com/jahidcsekgm/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.pinterest.com/jahidcsekurigram" class="google-plus"><i class="bx bxl-pinterest"></i></a>
           <a href="https://linkedin.com/in/jahidcse96" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="http://jahidcserstu.great-site.net/rstu/"><i class="bx bxs-log-in"></i></a>
+          <a href="http://jahidcse.great-site.net/rstu/"><i class="bx bxs-log-in"></i></a>
         </div>
       </div>
 
